# fapid-rest

./: README.md  pyproject.toml
fapid_rest/: api.py  main.py  settings.py
fapid_rest/common/models/: base.py
fapid_rest/database/: session.py
fapid_rest/item/: models.py  routes.py  service.py
fapid_rest/user/: models.py  routes.py  service.py
requirements/: requirements.in  requirements.txt
